--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -38,8 +38,8 @@
         <meta name="author" content="{{ author.name }}">
         <meta name="robots" content="index, follow">
         <link rel="canonical" href="{{ site.url | url }}{{ page.url }}">
-        <link rel="shortcut icon" type="image/png" href="{{ '/assets/img/favicon.png' | url }}">
-        <link rel="apple-touch-icon" href="{{ '/assets/img/apple-touch-icon.png' | url }}">
+        <link rel="shortcut icon" type="image/png" href="{{ 'https://source.boringavatars.com/marble/120' | url }}">
+        <link rel="apple-touch-icon" href="{{ 'https://source.boringavatars.com/marble/120' | url }}">
         <link rel="dns-prefetch" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="dns-prefetch" href="https://fonts.gstatic.com">
@@ -62,6 +62,5 @@
         </main>
         {% include "partials/footer.njk" %}
         <script src="{{ '/assets/js/bundle.js' | url }}"></script>
-        <script src="{{ '/assets/js/prism.js' | url }}"></script>
     </body>
 </html>
